# matrix-introspection

./: .gitignore  Cargo.toml  LICENSE  config.toml.example  index.html
src/: database.rs  main.rs
static/: index.html
static/assets/: matrix-introspection.js
