[package]
authors = ["Erik Johnston <erikj@matrix.org>"]
name = "viz-synapse"
version = "0.1.0"

[dependencies]
getopts = "0.2"
hyper = "0.10.0"
postgres = "0.13.3"
quick-error = "1.1.0"
rusqlite = "0.10.1"
rust-sqlite = "0.3.0"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"

[dependencies.hyper-router]
git = "https://github.com/erikjohnston/rust-hyper-router"
optional = false
