[package]
authors = ["Erik Johnston <erikj@matrix.org>"]
name = "matrix_introspection"
version = "0.1.0"

[dependencies]
clap = "2.21.1"
hyper = "0.10.0"
postgres = "0.14.0"
quick-error = "1.1.0"
rusqlite = "0.14.0"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"

[dependencies.hyper-router]
git = "https://github.com/erikjohnston/rust-hyper-router"
optional = false
